--- a/src/Views/Login/Login.css
+++ b/src/Views/Login/Login.css
@@ -30,6 +30,7 @@
     background-color: black;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .login-form--container h2 {
@@ -37,6 +38,7 @@
     font-size: 3.3rem;
     text-align: left;
     margin-top: 50px;
+    width: 90%;
 }
 
 .login-form {
