--- a/src/containers/MovieListContainer/MovieListContainer.css
+++ b/src/containers/MovieListContainer/MovieListContainer.css
@@ -1,4 +1,10 @@
 .movie-list-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    width: 90%;
+    min-width: 256px;
+    margin: 0 auto;
+    margin-top: 48px;
+    gap: 15px;
 }
