--- a/src/Components/MovieDetail/MovieDetail.css
+++ b/src/Components/MovieDetail/MovieDetail.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    margin-top: 30px;
 }
 
 .detail-poster {
@@ -64,8 +65,9 @@
 }
 
 .detail-description {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     color: white;
+    text-align: justify;
 }
 
 @media screen and (min-width: 769px) {
