--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -20,6 +20,7 @@
         display: flex;
         justify-content: center;
         padding: 20px;
+        z-index: 999;
     }
 
     .navbar ul {
