--- a/src/Views/Login/Login.css
+++ b/src/Views/Login/Login.css
@@ -6,6 +6,9 @@
     background-color: black;
     min-height: 100vh;
     height: max-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .login--container__logo {
@@ -15,10 +18,6 @@
     margin: 0 auto;
 }
 
-.logo {
-    width: 30%;
-    max-width: 200px;
-}
 
 .login-form--container {
     width: 90%;
