--- a/src/containers/Navbar/Navbar.css
+++ b/src/containers/Navbar/Navbar.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     gap: 40px;
+    margin-top: 20px;
 }
 
 
@@ -15,7 +16,7 @@
 }
 
 .navbar-logo img {
-    width: 100%;
+    width: 65%;
     max-width: 200px;
 }
 
@@ -51,6 +52,13 @@
         display: flex;
         gap: 20px;
         justify-content: space-around;
+        margin-top: 10px;
+    }
+
+
+    .navbar-logo img {
+        width: 100%;
+        max-width: 200px;
     }
 
     .navbar-logo-mobile {
