--- a/src/Components/MovieDetail/MovieDetail.css
+++ b/src/Components/MovieDetail/MovieDetail.css
@@ -4,6 +4,7 @@
     max-width: 800px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     margin-top: 30px;
 }
@@ -18,7 +19,6 @@
 
 .detail-poster img {
     width: 90%;
-    height: max-content;
 }
 
 .detail-content-container {
