--- a/src/Components/MovieList/MovieList.css
+++ b/src/Components/MovieList/MovieList.css
@@ -18,19 +18,19 @@
     border-radius: 50%;
     z-index: 3;
     background-color: rgb(0, 218, 11);
-    right: -10px;
-    top: -10px;
+    right: 0;
+    top: 0;
 }
 
 .card-average-mid {
     position: absolute;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     z-index: 3;
     background-color: rgb(219, 223, 0);
-    right: -10px;
-    top: -10px;
+    right: 0;
+    top: 0;
 }
 
 
@@ -41,8 +41,8 @@
     border-radius: 50%;
     z-index: 3;
     background-color: rgb(231, 35, 0);
-    right: -10px;
-    top: -10px;
+    right: 0;
+    top: 0;
 }
 
 .vote-average {
@@ -57,8 +57,8 @@
 
 
 .card-container {
-    width: 40%;
-    max-width: 300px;
+    width: 100%;
+    max-width: 170px;
     height: auto;
     background-color: black;
     margin-bottom: 20px;
