--- a/src/containers/MovieListContainer/MovieListContainer.css
+++ b/src/containers/MovieListContainer/MovieListContainer.css
@@ -1,10 +1,28 @@
-.movie-list-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 90%;
-    min-width: 256px;
+.list-container {
+    width: 80%;
     margin: 0 auto;
-    margin-top: 48px;
-    gap: 15px;
+    overflow-x: scroll;
+    margin-top: 40px;
+}
+
+.list-container p {
+    font-size: 1.8rem;
+    color: white;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+
+.list-scroll {
+    display: flex;
+    gap: 20px;
+    width: max-content;
+}
+
+.list-container::-webkit-scrollbar {
+    height: 5px;
+}
+
+.list-container::-webkit-scrollbar-thumb {
+    background: rgb(189, 0, 0);
 }
